# statistical-rethinking

./: README.md  Rachel Ch4 notes and examples.ipynb  chapter_02.ipynb  chapter_03.ipynb  pyproject.toml  pyro_playground.ipynb
.ipynb_checkpoints/: chapter_02-checkpoint.ipynb
code/: chapter_02.ipynb  chapter_03.ipynb  chapter_04.ipynb  chapter_05.ipynb  chapter_11.ipynb
notes/: .chapter_04.md.swo  .chapter_04.md.swp  chapter_04.md  chapter_05.md  chapter_06.md  chapter_07.md  chapter_08.md  chapter_09.md  chapter_10.md  chapter_11.md  chapter_12.md  chapter_13.md  chapter_14.md
