[tool.poetry]
name = "statistical-rethinking"
version = "0.1.0"
description = ""
authors = ["Toby Manders <toby.manders@invitae.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyro-ppl = "^1.8.1"
seaborn = "^0.11.2"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
html-table-parser-python3 = "^0.2.0"
lxml = "^4.9.1"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
